Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -159,21 +159,24 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.aux 
-.bit 
-.blg 
-.bbl 
-.lof 
-.log 
-.lot 
-.glo 
-.glx 
-.gxg 
-.gxs 
-.idx 
-.ilg 
-.ind 
-.out 
-.url 
-.svn 
-.toc
+*.aux 
+*.bit 
+*.blg 
+*.bbl 
+*.lof 
+*.log 
+*.lot 
+*.glo 
+*.glx 
+*.gxg 
+*.gxs 
+*.idx 
+*.ilg 
+*.ind 
+*.out 
+*.url 
+*.svn 
+*.toc
+*.fdb_latexmk
+*.fls
+*.synctex.gz
